--- a/tecnologie_web.html
+++ b/tecnologie_web.html
@@ -8,55 +8,55 @@
 
     <h1>Tecnologie WEB</h1>
 
-    <h2>HTML</h2>
-      <p>
-      Per la creazione di pagine. Linguaggio di markup, interpretato dal browser.
+    <h2 class="titolo">HTML</h2>
+      <p class="descrizione">
+        Per la creazione di pagine. Linguaggio di markup, interpretato dal browser.
     </p>
 
-    <h2>CSS</h2>
-      <p>
+    <h2 class="titolo">CSS</h2>
+      <p class="descrizione">
       Fogli di stile statici. Interpretati dal browser (?).
     </p>
 
-    <h2>Less</h2>
-    <p>
+    <h2 class="titolo">Less</h2>
+    <p class="descrizione">
       Fogli di stile dinamici. Si può parametrizzare con una variabile tutti i colori di fondo, in centinaia di fogli di stile e poi a runtime valorizzare quella variabile diversamente (es: JavaScript) e modificare tutto in un colpo solo.
     </p>
 
 
-    <h2>JavaScript</h2>
-    <p>
+    <h2 class="titolo">JavaScript</h2>
+    <p class="descrizione">
       Automatismo lato client.
       Viene eseguito sul client.
     </p>
 
-    <h2>JQuery</h2>
-    <p>
+    <h2 class="titolo">JQuery</h2>
+    <p class="descrizione">
       Per velocizzare Javascript. Fa la stessa cosa di JS ma in modo diverso, più veloce, più pratico.
     </p>
 
-    <h2>JQuery Mobile</h2>
-    <p>
+    <h2 class="titolo">JQuery Mobile</h2>
+    <p class="descrizione">
       JQuery con pacchetti preconfezionati per Mobile.
     </p>
 
-    <h2>AngularJS</h2>
-    <p>
+    <h2 class="titolo">AngularJS</h2>
+    <p class="descrizione">
       Per semplificare l'interazione col server.
     </p>
 
-    <h2>Angular 2.0</h2>
-    <p>
+    <h2 class="titolo">Angular 2.0</h2>
+    <p class="descrizione">
       Evoluzione - totalmente diversa - da AngularJS.
     </p>
 
-    <h2>Ajax</h2>
-    <p>
+    <h2 class="titolo">Ajax</h2>
+    <p class="descrizione">
       Permette un'interazione col server in maniera asincrona (concetto simile all'AsyncTask di Android).
     </p>
 
-    <h2>Note</h2>
-    <p>
+    <h2 class="titolo">Note</h2>
+    <p class="descrizione">
       JS, JQuery e Angular (2.0) sono componenti (in alternativa, per caratteristiche) di un'app a pagina singola lato client.<br />
       Nel momento in cui occorre interagire con il server, se serve <b>ricaricare</b> la pagina, si possono continuare ad utilizzare loro. Ogni chiamata cambia URL e quindi la nuova pagina viene caricata.<br />
       Nel caso invece in cui occorra notificare il server ma <b>non</b> ricaricare la pagina (es: carrello Amazon mentre si continua a navigare), si usa AJAX. L'URL rimane sempre la stessa e l'interazione con il server è in backgroud.
