--- a/tecnologie_web.html
+++ b/tecnologie_web.html
@@ -1,66 +1,75 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>Tecnologie web</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
   </head>
   <body>
-
-    <h1>Tecnologie WEB</h1>
-
-    <h2 class="titolo">HTML</h2>
+  <div class="argomento">
+    <h1 class="pagetitle">TECNOLOGIE WEB</h1>
+  </div>
+    <div class="argomento">
+      <h2 class="titolo">HTML</h2>
+        <p class="descrizione">
+          Per la creazione di pagine. Linguaggio di markup, interpretato dal browser.
+      </p>
+    </div>
+    <div class="argomento">
+      <h2 class="titolo">HTML</h2>
+        <p class="descrizione">
+        Fogli di stile statici. Interpretati dal browser (?).
+      </p>
+    </div>
+    <div class="argomento">
+      <h2 class="titolo">HTML</h2>
       <p class="descrizione">
-        Per la creazione di pagine. Linguaggio di markup, interpretato dal browser.
-    </p>
-
-    <h2 class="titolo">CSS</h2>
+        Fogli di stile dinamici. Si può parametrizzare con una variabile tutti i colori di fondo, in centinaia di fogli di stile e poi a runtime valorizzare quella variabile diversamente (es: JavaScript) e modificare tutto in un colpo solo.
+      </p>
+    </div>
+    <div class="argomento">
+      <h2 class="titolo">JavaScript</h2>
       <p class="descrizione">
-      Fogli di stile statici. Interpretati dal browser (?).
-    </p>
-
-    <h2 class="titolo">Less</h2>
-    <p class="descrizione">
-      Fogli di stile dinamici. Si può parametrizzare con una variabile tutti i colori di fondo, in centinaia di fogli di stile e poi a runtime valorizzare quella variabile diversamente (es: JavaScript) e modificare tutto in un colpo solo.
-    </p>
-
-
-    <h2 class="titolo">JavaScript</h2>
-    <p class="descrizione">
-      Automatismo lato client.
-      Viene eseguito sul client.
-    </p>
-
-    <h2 class="titolo">JQuery</h2>
-    <p class="descrizione">
-      Per velocizzare Javascript. Fa la stessa cosa di JS ma in modo diverso, più veloce, più pratico.
-    </p>
-
-    <h2 class="titolo">JQuery Mobile</h2>
-    <p class="descrizione">
-      JQuery con pacchetti preconfezionati per Mobile.
-    </p>
-
-    <h2 class="titolo">AngularJS</h2>
-    <p class="descrizione">
-      Per semplificare l'interazione col server.
-    </p>
-
-    <h2 class="titolo">Angular 2.0</h2>
-    <p class="descrizione">
-      Evoluzione - totalmente diversa - da AngularJS.
-    </p>
-
-    <h2 class="titolo">Ajax</h2>
-    <p class="descrizione">
-      Permette un'interazione col server in maniera asincrona (concetto simile all'AsyncTask di Android).
-    </p>
-
-    <h2 class="titolo">Note</h2>
-    <p class="descrizione">
-      JS, JQuery e Angular (2.0) sono componenti (in alternativa, per caratteristiche) di un'app a pagina singola lato client.<br />
-      Nel momento in cui occorre interagire con il server, se serve <b>ricaricare</b> la pagina, si possono continuare ad utilizzare loro. Ogni chiamata cambia URL e quindi la nuova pagina viene caricata.<br />
-      Nel caso invece in cui occorra notificare il server ma <b>non</b> ricaricare la pagina (es: carrello Amazon mentre si continua a navigare), si usa AJAX. L'URL rimane sempre la stessa e l'interazione con il server è in backgroud.
-    </p>
+        Automatismo lato client.
+        Viene eseguito sul client.
+      </p>
+    </div>
+    <div class="argomento">
+      <h2 class="titolo">JQuery</h2>
+      <p class="descrizione">
+        Per velocizzare Javascript. Fa la stessa cosa di JS ma in modo diverso, più veloce, più pratico.
+      </p>
+    </div>
+    <div class="argomento">
+      <h2 class="titolo">JQuery Mobile</h2>
+      <p class="descrizione">
+        JQuery con pacchetti preconfezionati per Mobile.
+      </p>
+    </div>
+    <div class="argomento">
+      <h2 class="titolo">AngularJS</h2>
+      <p class="descrizione">
+        Per semplificare l'interazione col server.
+      </p>
+    </div>
+    <div class="argomento">
+      <h2 class="titolo">Angular 2.0</h2>
+      <p class="descrizione">
+        Evoluzione - totalmente diversa - da AngularJS.
+      </p>
+    </div>
+    <div class="argomento">
+      <h2 class="titolo">Ajax</h2>
+      <p class="descrizione">
+        Permette un'interazione col server in maniera asincrona (concetto simile all'AsyncTask di Android).
+      </p>
+    </div>
+    <div class="argomento">
+      <h2 class="titolo">Note</h2>
+      <p class="descrizione">
+        JS, JQuery e Angular (2.0) sono componenti (in alternativa, per caratteristiche) di un'app a pagina singola lato client.<br />
+        Nel momento in cui occorre interagire con il server, se serve <b>ricaricare</b> la pagina, si possono continuare ad utilizzare loro. Ogni chiamata cambia URL e quindi la nuova pagina viene caricata.<br />
+        Nel caso invece in cui occorra notificare il server ma <b>non</b> ricaricare la pagina (es: carrello Amazon mentre si continua a navigare), si usa AJAX. L'URL rimane sempre la stessa e l'interazione con il server è in backgroud.
+      </p>
+    </div>
 
   </body>
 </html>
