Creato index Pulita impaginazione di altre pagine

--- a/android.html
+++ b/android.html
@@ -20,8 +20,9 @@ Sotto Linux eseguire da terminale "bin/.studio.sh". Da quel momento scarica l'SD
   Cliccando su "SDK Manager" si presenta quest'altra schermata
   <img src="img/android_studio_sdk_manager.png">
   in cui occorre selezionare quale SDK si vuole scaricare (consigliato dalla 5 in poi).
-  In base alla connessione può impiegare molto tempo.
-
+  In base alla connessione può impiegare molto tempo.<br />
+  Svilupperemo con la 5.0 o la 6.0 in base alle disponibilità dei vostri telefoni. E' molto importante che ognuno possa avere un telefono
+  Android su cui testare le proprie app.
 </p>
 
 
