Inserito msg che non si usano css x ora

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <br />
   Alcune tecnologie possono essere utili a livello didattico per i miei studenti, altre ad una platea più ampia.
   <br />
+  Al momento è tutto volutamente senza impaginazioni particolari. In futuro ci sarà anche quella. Per ora conta più la sostanza.
+  <br />
   Questa è una guida iniziale. In alcune pagine troverai appunti (corsivo) su una tecnologia che devo ancora rifinire.
   Ma che intanto ti condivido perché potrebbe già bastarte. Se ti sembra banale significa che sei più avanti. Ti può servire da ripasso. Da integrazione.
   Oppure puoi voltare le spalle e andare.
