Indice Manuale EDISES

--- a/scuola/concorso_straordinario/index.html
+++ b/scuola/concorso_straordinario/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+OCTYPE html>
 <html>
 <head>
 <title>CONCORSO STRAORDINARIO</title>
@@ -12,7 +12,21 @@
 </p>
 
 <ul>
+  <li>
+  Concorso 2012
+    <p>
+    Batterie di Domande accessibile dalle 20.00 del 27/11/17<br />
+    (nota MIUR: "...i candidati potranno prendere visione dell’archivio da cui saranno estratti i quesiti di cui al comma 2 dell’art. 5 del bando...")<br />
+    fonte: <a href="https://www.informaquiz.it/news/concorso-docenti-la-batteria-dei-quiz-sar%C3%A0-disponibile-seratas" target="_blank">
+    https://www.informaquiz.it/news/concorso-docenti-la-batteria-dei-quiz-sar%C3%A0-disponibile-seratas</a>
+    </p>
+  </li>
+</ul>
+
+
+<ul>
   <li><a href="tfa.html">TFA</a></li>
+  <li><a href="manualeEDISES_A41.html">Manuale EDISES A41</a></li>
 </ul>
 
 </body>
